--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,9 +30,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="hobby.html"><i class="bi bi-controller"></i> Intresses/hobby's</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ervaring.html"><i class="bi bi-hammer"></i> Ervaring</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="contact.html"><i class="bi bi-chat-left-text"></i> Contact</a>
