--- a/cv.html
+++ b/cv.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Project2</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -11,67 +13,69 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="project2.css">
-
-
 </head>
+
+
 <body>
+
+  <!-- navbar -->
+  <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Rens Tengrootenhuysen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cv.html"><i class="bi bi-file-person"></i> CV</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="hobby.html"><i class="bi bi-controller"></i> Intresses/hobby's</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html"><i class="bi bi-chat-left-text"></i> Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <!-- navbar -->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Rens Tengrootenhuysen</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="cv.html"><i class="bi bi-file-person"></i> CV</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="hobby.html"><i class="bi bi-controller"></i> Intresses/hobby's</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ervaring.html"><i class="bi bi-hammer"></i> Ervaring</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html"><i class="bi bi-chat-left-text"></i> Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-<!-- navbar -->
+
 
 
 
 <!-- Footer -->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
-      </a>
-      <span class="text-muted">© Tengrootenhuysen Rens <br> NR: 0474693181</span>
-      
-    </div>
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3 m-1">
-        <a class="text-muted" href="https://twitter.com/?lang=nl"><i class="bi bi-twitter"></i></a>
-      </li>
-      <li class="ms-3 m-1">
-        <a class="text-muted" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
-      </li>
-      <li class="ms-3 m-1">
-        <a class="text-muted" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
-      </li>
-    </ul>
-  </footer>
-  <!-- footer -->
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <div class="col-md-4 d-flex align-items-center">
+    <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+      <svg class="bi" width="30" height="24">
+        <use xlink:href="#bootstrap"></use>
+      </svg>
+    </a>
+    <span class="text-muted">© Tengrootenhuysen Rens <br> NR: 0474693181</span>
+    
+  </div>
+  <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+    <li class="ms-3 m-1">
+      <a class="text-muted" href="https://twitter.com/?lang=nl"><i class="bi bi-twitter"></i></a>
+    </li>
+    <li class="ms-3 m-1">
+      <a class="text-muted" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+    </li>
+    <li class="ms-3 m-1">
+      <a class="text-muted" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
+    </li>
+  </ul>
+</footer>
+<!-- footer -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
+
+
 </html>
+
+
