--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project2</title>
+    <title>CV</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -16,7 +16,7 @@
 </head>
 
 
-<body>
+<body class="body_cv">
 
   <!-- navbar -->
   <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
@@ -44,7 +44,86 @@
     </div>
   </nav>
 <!-- navbar -->
+<div class="cv">
 
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <div class="full">
+          <div class="left">
+              <div class="Contact">
+                  <h2>Contact</h2>
+                  <p><b>Email: </b>r0991312@student.thomasmore.be</p>
+                  <p><b>Mobile: </b>0474693181</p>
+              </div>
+              <hr>
+              <div class="Skills">
+                  <h2>Ervaringen</h2>
+                  <ul>
+                      <li><b> 
+                        C#</b></li>
+                      <li><b> HTML, CSS 
+                        </b></li>
+                      
+                  </ul>
+              </div>
+              <hr>
+              <div class="Language">
+                  <h2>Talen</h2>
+                  <ul>
+                      <li>Engels</li>
+                      <li>Nederlands</li>
+                      <li>Frans</li>
+                  </ul>
+              </div>
+              <hr>
+              <div class="Hobbies">
+                  <h2>Hobby's</h2>
+                  <ul>
+                      <li>gaming</li>
+                      <li>op cafe gaan</li>
+                  </ul>
+                  <hr>
+              </div>
+          </div>
+          <div class="right">
+              <div class="name">
+                  <h1>Rens Tengrootenhuysen</h1>
+              </div>
+              <div class="title">
+                  <p>Web Developer</p>
+              </div>
+              <hr>
+              <div class="Summary">
+                  <h2>Profiel</h2>
+                  <p>Hallo, mijn naam is Rens Tengrootenhuysen. Ik ben een 21 jaar oude student op Thomas More Turnhout, gebaseerd in Rijkevorsel.
+                  </p>
+              </div>
+              <hr>
+              <div class="Experience">
+                  <h2>Werk ervaring</h2>
+                  <h3>Ebema Rijkevorsel</h3>
+                  <p>2020-2023</p>
+                  <p>Hier moest ik vooral beton stukken maken en bijwerken, en soms ook wegrijden in het magazijn.</p>
+              </div>
+              <hr>
+              <div class="Education">
+                  <h2>Opleiding</h2>
+                  <p>Thomas More Turnhout</p>
+                  <p>2023-heden</p>
+                  <p>Ik studeer aan een graduaat programmeren</p>
+              </div>
+              <hr>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-4">
+        <img class="foto_cv" src="images/foto mezelf.png" alt="foto mezelf">
+      </div>
+  </div>
+</div>
+</div>
 
 
 
