--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   <div class="container px-4">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5" id="start">
       <div class="col-lg-4">
-        <img src="images/foto mezelf.png" class="d-block mx-lg-auto img-fluid" alt="foto Rens" loading="lazy">
+        <img src="images/foto_mezelf.png" class="d-block mx-lg-auto img-fluid" alt="foto Rens" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3 text-dark">Rens Tengrootenhuysen</h1>
         <p class="lead text-dark">
-          Hallo, mijn naam is Rens Tengrootenhuysen. Ik ben een 21 jaar oude student op Thomas More Turnhout, gebaseerd in Rijkevorsel. <br>Dit is mijn portfolio <br> <a href="contact.html"><button type="button" class="btn btn-warning">Contacteren!</button> </a>
+        Hallo, mijn naam is Rens Tengrootenhuysen. Ik ben een 21 jaar oude student op Thomas More Turnhout, gebaseerd in Rijkevorsel. <br>Dit is mijn portfolio <br><a class="btn btn-warning" href="contact.html" role="button">Contacteren!</a> 
         </p>
         <div class="d-grid gap-2 d-md-flex justify-content-center">
           
@@ -76,7 +76,7 @@
   <div class="col">
     <div class="card h-100 bg-warning">
       <a href="ervaring.html">
-      <img src="images/logo ebema.jpg" class="card-img-top h-75" alt="foto ebema">
+      <img src="images/logo_ebema.jpg" class="card-img-top h-75" alt="foto ebema">
       </a> 
       <div class="card-body">
         <h5 class="card-title">Ervaring</h5>
@@ -98,7 +98,7 @@
   <div class="col">
     <div class="card h-100 bg-warning">
       <a href="cv.html">
-      <img src="images/foto cv.png" class="card-img-top" alt="foto cv">
+      <img src="images/foto_cv.png" class="card-img-top" alt="foto cv">
       </a>
       <div class="card-body">
         <h5 class="card-title">CV</h5>
