--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 
 </head>
 <body>
-     <!-- navbar -->
-     <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
+  <!-- navbar -->
+    <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Rens Tengrootenhuysen</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,18 +37,18 @@
             </ul>
           </div>
         </div>
-      </nav>
-<!-- navbar -->
+    </nav>
+  <!-- navbar -->
 
 <div class="container mt-5">
       <h1>Contacteer mij!</h1>
       <form class="row g-3">
         <div class="col-md-6">
-          <label for="voorNaam" class="form-label">voornaam</label>
+          <label for="voorNaam" class="form-label">Voornaam</label>
           <input type="text" class="form-control" id="voorNaam" required>
         </div>
         <div class="col-md-6">
-          <label for="naam" class="form-label">naam</label>
+          <label for="naam" class="form-label">Naam</label>
           <input type="text" class="form-control" id="naam" required>
         </div>
         <div class="col-md-8">
@@ -56,7 +56,7 @@
           <input type="text" class="form-control" id="emailInfo" required>
         </div>
         <div class="col-md-4">
-          <label for="inputState" class="form-label">intresse in skills</label>
+          <label for="inputState" class="form-label">Intresse in skills</label>
           <select id="inputState" class="form-select">
             <option selected>...</option>
             <option>CSS</option>
