--- a/cv.html
+++ b/cv.html
@@ -28,10 +28,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
+            <a class="nav-link" aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cv.html"><i class="bi bi-file-person"></i> CV</a>
+            <a class="nav-link active" href="cv.html"><i class="bi bi-file-person"></i> CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="hobby.html"><i class="bi bi-controller"></i> Intresses/hobby's</a>
@@ -48,7 +48,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-8">
+      <div class="col-md-12 col-lg-12 col-xl-4">
         <div class="full">
           <div class="left">
               <div class="Contact">
@@ -118,8 +118,9 @@
         </div>
 
       </div>
-      <div class="col-4">
-        <img class="foto_cv" src="images/foto mezelf.png" alt="foto mezelf">
+      <div class="col-4"></div>
+      <div class="col-md-12 col-lg-12 col-xl-4">
+        <img class="foto_cv" src="images/foto_mezelf.png" alt="foto mezelf">
       </div>
   </div>
 </div>
