--- a/hobby.html
+++ b/hobby.html
@@ -57,12 +57,12 @@
 
 <div class="container">
   <div class="owl-carousel owl-theme owl-drag owl-">
-    <div class="item"> <img src="images/bar (1) (1).jpg" alt=""> </div>
+    <div class="item"> <img src="images/bar.jpg" alt=""> </div>
     <div class="item"> <img src="images/cafe.jpg" alt=""> </div>
     <div class="item"> <img src="images/mojito.jpg" alt=""> </div>
-    <div class="item"> <img src="images/controllers (1).jpg" alt=""> </div>
+    <div class="item"> <img src="images/controllers.jpg" alt=""> </div>
     <div class="item"> <img src="images/gamen.jpg" alt=""> </div>
-    <div class="item"> <img src="images/lan party (1).jpg" alt=""> </div>
+    <div class="item"> <img src="images/lan_party.jpg" alt=""> </div>
   </div>
 </div>
 <div class="container col-12">
